[package]
name = "controller"
version = "0.1.0"
edition = "2021"

[features]
opengl = ["gl", "glutin", "gl_abstractions", "affine", "fontdue"]
cli = ["rustyline"]
gles = []

[[bin]]
name = "cube_control_gui"
path = "src/gui_ogl.rs"
required-features = ["opengl"]

[[bin]]
name = "cube_control_cli"
path = "src/cli.rs"
required-features = ["cli"]

[dependencies]
glutin = { version="0.28.0", optional=true }
gl = { version="0.14.0", optional=true }
gl_abstractions = { path="../gl_abstractions", optional=true }
affine = { path="../affine", optional=true }
rand = "0.8.5"
cube_model = {path="../cube_model"}
plain_authentic_commands = { path="../plain_authentic_commands" }
rustyline = { version="9.1.2", optional=true }
fontdue = {version="0.7.2", optional=true}
game_timer = { path="../game_timer" }

[profile.release]
debug=true
