[package]
edition = "2018"
name = "device"
version = "0.1.0"

[dependencies]
cortex-m = "0.7.3"
cortex-m-rt = "0.7.0"
embedded-hal = { version = "0.2.5", features=["unproven"] }
embedded-time = "0.12.0"

defmt = "0.3.0"
defmt-rtt = "0.3.0"
panic-probe = { version = "0.3.0", features = ["print-defmt"] }
panic-halt = "0.2.0"

rp-pico = "0.2.0"
smart-leds = "0.3.0"
ws2812-spi = "0.4.0"
