[package]
name = "service"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.1.5", features = ["derive"] }
pest = "2.0"
plain_authentic_commands = { path="../plain_authentic_commands", features = ["challenge"] }
cube_model = { path="../cube_model" }
game_timer = { path="../game_timer" }
serialport = "4.0.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0.30"
rodio = "0.15.0"
rand = "0.8.5"
reqwest = { version = "0.11", features = ["blocking", "json"] }
chrono = "0.4"
